<resources>
    <string name="app_name">Real Estate Manager</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>

    <string name="connectivity_test">Test my connexion</string>
    <string name="content_provider_test">Test my Content Provider</string>
    <string name="menu_listview">LISTVIEW</string>
    <string name="menu_mapview">MAPVIEW</string>
    <string name="menu_itemview">ITEMVIEW</string>
    <string name="detail_activity_previous_page">Previous page button</string>
    <string name="item_listview_photo">item picture</string>
    <string name="item_listview_text_example">This is an example</string>
    <string name="item_listview_price_example">$30,000,000</string>
    <string name="fragment_item_textview_media">Media</string>
    <string name="fragment_item_textview_description"> This is a sample description for a property for sale through this app! this paragraph may be very important! This is a sample description for a property for sale through this app! this paragraph may be very important! This is a sample description for a property for sale through this app! this paragraph may be very important!</string>
    <string name="fragment_item_textview_description_title">Description: </string>
    <string name="fragment_item_card_view_surface_title">Surface</string>
    <string name="fragment_item_card_view_surface_value">350m²</string>
    <string name="fragment_item_card_view_number_room_title">Number of rooms</string>
    <string name="fragment_item_card_view_number_room">8</string>
    <string name="fragment_item_card_view_number_bathroom_title">Number of bathrooms</string>
    <string name="fragment_item_card_view_number_bathroom">2</string>
    <string name="fragment_item_card_view_number_bedroom_title">Number of bedrooms</string>
    <string name="fragment_item_card_view_number_bedroom">4</string>
    <string name="fragment_item_card_view_location_title">Location</string>
    <string name="fragment_item_card_view_location_value">123 boulevard des essais 59000 Lille</string>
    <string name="fragment_item_title">ITEM_PROPERTY_TITLE</string>
    <string name="activity_add_property_textview_title">Add a Property</string>
    <string name="activity_add_property_edittext_title">Enter a title</string>
    <string name="activity_add_property_edittext_surface">Surface (m²)</string>
    <string name="activity_add_property_edittext_room_number">Number of rooms</string>
    <string name="activity_add_property_edittext_bathroom_number">Number of bathrooms</string>
    <string name="activity_add_property_edittext_bedroom_number">Number of bedrooms</string>
    <string name="activity_add_property_edittext_address">Address</string>
    <string name="activity_add_property_edittext_price">Price ($)</string>
    <string name="activity_add_property_button_add">ADD</string>
    <string name="activity_add_property_edittext_description">Description</string>
    <string name="activity_add_property_textview_property_type">Select property type:</string>
    <string name="activity_add_property_textview_real_estate_agent">Select real estate agent:</string>
    <string name="activity_add_property_previous_page_button">Previous page button</string>
    <string name="menu_add_property">Add a property</string>
    <string name="item_spinner_property_type">property type name</string>
    <string name="item_spinner_real_estate_agent">Real estate agent name</string>
    <string name="add_property_title_error">Please enter a title</string>
    <string name="add_property_address_error">Invalid address</string>
    <string name="add_property_description_error">Please describe the property here !</string>
    <string name="add_property_surface_error">Please specify the surface</string>
    <string name="add_property_room_error">Please specify the number of rooms</string>
    <string name="add_property_bathroom_error">Please specify the number of bathrooms</string>
    <string name="add_property_bedroom_error">Please specify the number of bedrooms</string>
    <string name="add_property_price_error">Please specify the price !</string>
    <string name="activity_add_property_button_add_picture">ADD A PHOTO</string>
    <string name="activity_add_property_button_add_point_of_interest">ADD POINT OF INTEREST</string>
    <string name="activity_add_property_item_point_of_interest_example">this is a point of interest</string>
    <string name="dialog_point_of_interest_name">name</string>
    <string name="dialog_point_of_interest_address">Address</string>
    <string name="dialog_title">Add a point of interest</string>
    <string name="dialog_add_button">ADD</string>
    <string name="dialog_point_of_interest_name_error">Please enter a name</string>
    <string name="dialog_point_of_interest_address_error">Please enter an address</string>
    <string name="fragment_item_card_view_point_of_interest_title">Point(s) of interest :</string>
    <string name="item_point_of_interest_name">Point of interest name</string>
    <string name="item_point_of_interest_address">123 rue des test 59000 LaMatrice</string>
    <string name="dialog_photo_title">Add a picture</string>
    <string name="dialog_add_picture_button">ADD PICTURE</string>
    <string name="dialog_add_property_add_picture_title">ADD A PICTURE</string>
    <string name="dialog_property_photo_description_error">Please add a description</string>
    <string name="item_point_of_interest_marker_char">A</string>
    <string name="update_view">UPDATE_VIEW</string>
    <string name="fragment_item_update_button">UPDATE</string>
    <string name="action_localise_my_position">Localise me button</string>
    <string name="dialog_search_title">Research options :</string>
    <string name="dialog_search_button">SEARCH !</string>
    <string name="dialog_search_spinner_type_title">Select type:</string>
    <string name="fragment_item_textview_type">TYPE</string>
    <string name="fragment_item_textview_on_sale_date">24/12/2023</string>
    <string name="fragment_item_textview_on_sale_date_title">post date: </string>
    <string name="fragment_item_textview_by_title">by: </string>
    <string name="fragment_item_textview_agent">Eddy</string>
    <string name="fragment_item_textview_sold_on">31/12/2023</string>
    <string name="fragment_item_textview_sold_on_title">SOLD ON: </string>
    <string name="fragment_item_sale_status">FOR SALE</string>
    <string name="activity_add_property_for_sale_switch">For sale? </string>
    <string name="add_property_no_choice_photo">Please take or select a photo !</string>
    <string name="add_property_allow_app_take_photo">You didn\'t allow the app to take pictures !</string>
    <string name="add_property_add_photo">Please add photo to your property !</string>
    <string name="add_property_done">"New property added ! id: "</string>
    <string name="update_property_update_button">UPDATE</string>
    <string name="update_property_title">UPDATE THE PROPERTY</string>
    <string name="dialog_search_item_title">title</string>
    <string name="dialog_search_item_address">address</string>
    <string name="dialog_search_item_surface">surface (min)</string>
    <string name="dialog_search_surface">m²</string>
    <string name="dialog_search_item_surface_max">surface (max)</string>
    <string name="dialog_search_item_room">Room</string>
    <string name="dialog_search_number">number</string>
    <string name="dialog_search_item_bathroom">Bathroom</string>
    <string name="dialog_search_item_bedroom">Bedroom</string>
    <string name="dialog_search_item_price">Price</string>
    <string name="dialog_search_price_dollar">$$$</string>
    <string name="dialog_add_property_take_picture_button">TAKE A PICTURE</string>
    <string name="dialog_add_property_select_picture_button">SELECT A PICTURE</string>
    <string name="dialog_add_picture">taken or selected picture</string>
    <string name="dialog_add_picture_description">photo description</string>
    <string name="simulator">Simulator</string>
    <string name="simulator_textview_title">Simulator</string>
    <string name="simulator_amount_to_borrow">Amount to borrow</string>
    <string name="simulator_number_of_monthly_payments">Number of monthly payments</string>
    <string name="simulator_contribution_amount">Contribution amount</string>
    <string name="simulator_estimate_button">Estimate</string>
    <string name="simulator_textview_result">Result per month</string>
    <string name="simulator_price">Property price</string>
    <string name="simulator_textview_credit_cost">Credit cost</string>
    <string name="simulator_textview_interest">Interest</string>
    <string name="simulator_textview_year">Years of payment</string>
    <string name="simulator_textview_difference">Missing sum</string>
    <string name="simulator_missing_info">Missing info</string>
</resources>
