<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <item
        android:id="@+id/nav_add_property"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/menu_add_property" />
    <item
        android:id="@+id/nav_content_provider_test"
        android:icon="@drawable/ic_baseline_share_24"
        android:title="@string/content_provider_test" />
    <item
        android:id="@+id/nav_connectivity_manager_test"
        android:icon="@drawable/ic_baseline_network_check_24"
        android:title="@string/connectivity_test" />
    <item
        android:id="@+id/nav_simulator"
        android:icon="@drawable/ic_baseline_attach_money_24"
        android:title="@string/simulator" />
</menu>