<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".add.AddPropertyActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin">

            <ImageView
                android:id="@+id/activity_add_property_previous_page_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="16dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@drawable/ic_baseline_arrow_back_24"
                android:contentDescription="@string/activity_add_property_previous_page_button" />

            <TextView
                android:id="@+id/activity_add_property_textview_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:text="@string/activity_add_property_textview_title"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_title"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_textview_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_address"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_edittext_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_editText_multiline_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:ems="10"
                android:hint="@string/activity_add_property_edittext_description"
                android:gravity="start|top"
                android:maxLines="3"
                android:inputType="textMultiLine"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_edittext_address"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <View
                android:id="@+id/activity_add_property_view_separator_first"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_editText_multiline_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_surface"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_surface"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_view_separator_first"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_room_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_room_number"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_edittext_surface"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_bathroom_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_bathroom_number"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_edittext_room_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_bedroom_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_bedroom_number"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_edittext_bathroom_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/activity_add_property_view_separator_second"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_edittext_bedroom_number"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/activity_add_property_textview_property_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/activity_add_property_textview_property_type"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_view_separator_second"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/activity_add_property_spinner_property_type"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_view_separator_second"
                app:layout_constraintStart_toEndOf="@id/activity_add_property_textview_property_type"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/activity_add_property_textview_real_estate_agent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:text="@string/activity_add_property_textview_real_estate_agent"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_spinner_property_type"
                app:layout_constraintStart_toStartOf="parent"/>

            <Spinner
                android:id="@+id/activity_add_property_spinner_real_estate_agent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_spinner_property_type"
                app:layout_constraintStart_toEndOf="@id/activity_add_property_textview_real_estate_agent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/activity_add_property_view_separator_third"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_spinner_real_estate_agent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <EditText
                android:id="@+id/activity_add_property_edittext_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:padding="8dp"
                android:hint="@string/activity_add_property_edittext_price"
                android:autofillHints="name"
                android:backgroundTint="@color/colorPrimary"
                android:inputType="number"
                app:layout_constraintTop_toBottomOf="@id/activity_add_property_view_separator_third"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <View
                android:id="@+id/activity_add_property_view_separator_fourth"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="16dp"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorPrimary"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_edittext_price"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/activity_add_property_add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:text="@string/activity_add_property_button_add"
                android:textColor="@color/black"
                app:layout_constraintTop_toBottomOf="@+id/activity_add_property_view_separator_fourth"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>